fixed scss blocks

--- a/source/form.html
+++ b/source/form.html
@@ -81,22 +81,16 @@
           <legend class="field-group__title heading">Ваше общее впечатление:</legend>
           <ul class="field-group__list">
             <li class="field-group__item">
-              <label class="field-group__form-label field-group__form-label--list">
-                <input class="field-group__form-input visually-hidden" type="radio" name="impression" checked>
-                Скорее положительное
-              </label>
+              <input class="field-group__input-radio visually-hidden" type="radio" name="impression" checked id="positive">
+              <label class="field-group__label-list field-group__label-list--radio" for="positive">Скорее положительное</label>
             </li>
-            <li class="field-group__item">
-              <label class="field-group__form-label field-group__form-label--list">
-                <input class="field-group__form-input visually-hidden" type="radio" name="impression">
-                Скорее отрицательное
-              </label>
+            <li class="field-group__item field-group__item--radio">
+              <input class="field-group__input-radio visually-hidden" type="radio" name="impression" id="negative">
+              <label class="field-group__label-list field-group__label-list--radio" for="negative">Скорее отрицательное</label>
             </li>
-            <li class="field-group__item">
-              <label class="field-group__form-label field-group__form-label--list">
-                <input class="field-group__form-input visually-hidden" type="radio" name="impression">
-                Затрудняюсь ответить
-              </label>
+            <li class="field-group__item field-group__item--radio">
+              <input class="field-group__input-radio visually-hidden" type="radio" name="impression" id="unknown">
+              <label class="field-group__label-list field-group__label-list--radio" for="unknown">Затрудняюсь ответить</label>
             </li>
           </ul>
         </fieldset>
@@ -104,29 +98,21 @@
         <fieldset class="reviews__field-group field-group">
           <legend class="field-group__title heading">Посещенные достопримечательности:</legend>
           <ul class="field-group__list">
-            <li class="field-group__item field-group__item--checkbox">
-              <label class="field-group__form-label field-group__form-label--list">
-                <input class="field-group__form-input field-group__form-input--checkbox visually-hidden" type="checkbox" name="bridge" checked>
-                Мост Дьявола
-              </label>
+            <li class="field-group__item">
+              <input class="field-group__input-checkbox visually-hidden" type="checkbox" name="bridge" id="bridge" checked>
+              <label class="field-group__label-list" for="bridge">Мост Дьявола</label>
             </li>
-            <li class="field-group__item field-group__item--checkbox">
-              <label class="field-group__form-label field-group__form-label--list">
-                <input class="field-group__form-input field-group__form-input--checkbox visually-hidden" type="checkbox" name="mount" checked>
-                Гора-Колокол
-              </label>
+            <li class="field-group__item">
+              <input class="field-group__input-checkbox visually-hidden" type="checkbox" name="mount" id="mount" checked>
+              <label class="field-group__label-list" for="mount">Гора-Колокол</label>
             </li>
-            <li class="field-group__item field-group__item--checkbox">
-              <label class="field-group__form-label field-group__form-label--list">
-                <input class="field-group__form-input field-group__form-input--checkbox visually-hidden" type="checkbox" name="park" checked>
-                Слайд-парк
-              </label>
+            <li class="field-group__item">
+              <input class="field-group__input-checkbox visually-hidden" type="checkbox" name="park" checked id="park">
+              <label class="field-group__label-list" for="park">Слайд-парк</label>
             </li>
-            <li class="field-group__item field-group__item--checkbox">
-              <label class="field-group__form-label field-group__form-label--list">
-                <input class="field-group__form-input field-group__form-input--checkbox visually-hidden" type="checkbox" name="rocks">
-                Красные скалы
-              </label>
+            <li class="field-group__item">
+              <input class="field-group__input-checkbox visually-hidden" type="checkbox" name="rocks" id="rocks">
+              <label class="field-group__label-list" for="rocks">Красные скалы</label>
             </li>
           </ul>
         </fieldset>
