--- a/source/index.html
+++ b/source/index.html
@@ -2,6 +2,7 @@
 <html class="page" lang="ru">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -41,14 +42,14 @@
     <div class="intro__wrapper">
       <h2 class="visually-hidden">Знакомство с городом Седона</h2>
       <img class="intro__logo" src="img/intro-logo.svg" width="282" height="214" alt="Добро пожаловать в Седону.">
-      <p class="intro__slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-      <p class="intro__reasons">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
     </div>
   </section>
 
   <section class="advantages">
     <div class="advantages__wrapper">
       <h2 class="visually-hidden">Преимущества</h2>
+      <p class="advantages__slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+      <p class="advantages__reasons">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       <ul class="advantages__list">
         <li class="advantages__item advantages__item--accent">
           <h3 class="advantages__title heading advantages__title--accent">Настоящий городок</h3>
