added media form.html

--- a/source/form.html
+++ b/source/form.html
@@ -78,7 +78,7 @@
           </div>
         </fieldset>
 
-        <fieldset class="reviews__field-group field-group">
+        <fieldset class="reviews__field-group reviews__field-group--row field-group">
           <legend class="field-group__title heading">Ваше общее впечатление:</legend>
           <ul class="field-group__list">
             <li class="field-group__item">
@@ -96,7 +96,7 @@
           </ul>
         </fieldset>
 
-        <fieldset class="reviews__field-group field-group">
+        <fieldset class="reviews__field-group reviews__field-group--row field-group">
           <legend class="field-group__title heading">Посещенные достопримечательности:</legend>
           <ul class="field-group__list">
             <li class="field-group__item">
@@ -118,7 +118,7 @@
           </ul>
         </fieldset>
 
-        <div class="reviews__field-group field-group">
+        <div class="reviews__field-group reviews__field-group--row field-group">
           <label for="review-text" class="field-group__form-label field-group__form-label--textarea heading">Опишите свои эмоции:</label>
           <textarea class="field-group__form-input field-group__form-input--textarea" rows="10" name="review-text" id="review-text" placeholder="Опишите подробно все свои восторги">
           </textarea>
