fixed scss blocks

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
-<header class="main-header">
+<header class="main-header container">
   <a class="main-header__logo" href="#">
     <img class="main-header__logo-image" src="img/logo.svg" alt="Город Седона" width="185" height="96">
   </a>
@@ -45,7 +45,7 @@
   </section>
 
   <section class="content">
-    <div class="content__wrapper">
+    <div class="content__wrapper container">
       <h2 class="content__title heading">Фото и видео</h2>
       <p class="content__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       <ul class="content__list gallery">
@@ -73,8 +73,7 @@
               <p class="gallery__author">Автор фото: <cite>Сергей</cite></p>
               <button class="gallery__button" type="button">
                 <span class="visually-hidden">количество лайков</span>
-                <svg class="gallery__button-icon" width="23" height="21" viewBox="0 0 23 21" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
+                <svg class="gallery__button-icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z"/>
                 </svg>
@@ -91,8 +90,7 @@
               <p class="gallery__author">Автор фото: <cite>Петр</cite></p>
               <button class="gallery__button" type="button">
                 <span class="visually-hidden">количество лайков</span>
-                <svg class="gallery__button-icon" width="23" height="21" viewBox="0 0 23 21" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
+                <svg class="gallery__button-icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z"/>
                 </svg>
@@ -109,8 +107,7 @@
               <p class="gallery__author">Автор фото: <cite>Антон</cite></p>
               <button class="gallery__button" type="button">
                 <span class="visually-hidden">количество лайков</span>
-                <svg class="gallery__button-icon" width="23" height="21" viewBox="0 0 23 21" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
+                <svg class="gallery__button-icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z"/>
                 </svg>
@@ -124,7 +121,7 @@
   </section>
 
   <section class="video">
-    <div class="video__wrapper">
+    <div class="video__wrapper container">
       <h2 class="video__title heading">Все еще сомневаетесь?</h2>
       <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
       <img class="video__content-image" src="./img/catalog/video-mobile.jpg" width="280" height="177" alt="Видеопрезентация о Седоне">
@@ -140,7 +137,7 @@
 </main>
 
 <footer class="main-footer">
-  <div class="main-footer__wrapper">
+  <div class="main-footer__wrapper container">
     <a class="main-footer__hashtag-link" href="#">#visitsedona</a>
     <section class="main-footer__social social">
       <h2 class="visually-hidden">Социальные сети</h2>
