--- a/source/form.html
+++ b/source/form.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
-<header class="main-header">
+<header class="main-header container">
   <a class="main-header__logo" href="#">
     <img class="main-header__logo-image" src="./img/logo.svg" alt="Город Седона" width="185" height="96">
   </a>
@@ -45,7 +45,7 @@
   </section>
 
   <section class="reviews">
-    <div class="reviews__wrapper">
+    <div class="reviews__wrapper container">
       <h2 class="reviews__title heading">Оставьте свой отзыв</h2>
       <p class="reviews__description">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
 
@@ -136,7 +136,7 @@
 </main>
 
 <footer class="main-footer">
-  <div class="main-footer__wrapper">
+  <div class="main-footer__wrapper container">
     <a class="main-footer__hashtag-link" href="#">#visitsedona</a>
     <section class="main-footer__social social">
       <h2 class="visually-hidden">Социальные сети</h2>
