--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
-<header class="main-header">
+<header class="main-header container">
   <a class="main-header__logo" href="#">
     <img class="main-header__logo-image" src="img/logo.svg" alt="Город Седона" width="185" height="96">
   </a>
@@ -39,7 +39,7 @@
   <h1 class="visually-hidden">Город Седона</h1>
 
   <section class="intro">
-    <div class="intro__wrapper">
+    <div class="intro__wrapper container">
       <h2 class="visually-hidden">Знакомство с городом Седона</h2>
       <img class="intro__logo" src="img/intro-logo.svg" width="282" height="214" alt="Добро пожаловать в Седону.">
     </div>
@@ -56,8 +56,6 @@
           <span class="advantages__number">— №1 —</span>
           <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
           <img class="advantages__image" src="./img/photo-city-mobile.jpg" width="320" height="260" alt="Город Седона">
-        </li>
-        <li class="advantages__item advantages__item--qualities">
           <ul class="advantages__list-qualities">
             <li class="advantages__item advantages__item--quality advantages__item--house">
               <h3 class="advantages__title heading">Жилье</h3>
@@ -99,7 +97,7 @@
   </section>
 
   <section class="search">
-    <div class="search__wrapper">
+    <div class="search__wrapper container">
       <h2 class="search__title">Заинтересовались?</h2>
       <p class="search__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
       <a class="search__button button" href="#">Найти гостиницу</a>
@@ -117,7 +115,7 @@
 </main>
 
 <footer class="main-footer">
-  <div class="main-footer__wrapper">
+  <div class="main-footer__wrapper container">
     <a class="main-footer__hashtag-link" href="#">#visitsedona</a>
     <section class="main-footer__social social">
       <h2 class="visually-hidden">Социальные сети</h2>
