--- a/source/index.html
+++ b/source/index.html
@@ -11,12 +11,13 @@
   <a class="main-header__logo" href="#">
     <img class="main-header__logo-image" src="img/logo.svg" alt="Город Седона" width="185" height="96">
   </a>
-  <nav class="main-navigation">
+  <nav class="main-navigation main-navigation--closed">
     <button class="main-navigation__toggle" type="button">
-      <svg class="main-navigation__icon" width="23" height="23" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22.2 2.8 19.4 0l-8.3 8.3L2.8 0 0 2.8l8.3 8.3L0 19.4l2.8 2.8 8.3-8.3 8.3 8.3 2.8-2.8-8.3-8.3 8.3-8.3Z"/></svg>
+      <svg class="main-navigation__icon main-navigation__icon--closed" width="23" height="22" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22.9 0H0v4h22.9V0ZM22.9 9H0v4h22.9V9ZM22.9 18H0v4h22.9v-4Z"/></svg>
+      <svg class="main-navigation__icon main-navigation__icon--opened" width="23" height="23" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22.2 2.8 19.4 0l-8.3 8.3L2.8 0 0 2.8l8.3 8.3L0 19.4l2.8 2.8 8.3-8.3 8.3 8.3 2.8-2.8-8.3-8.3 8.3-8.3Z"/></svg>
       <span class="visually-hidden">Открыть меню</span>
     </button>
-    <div class="main-navigation__wrapper">
+    <div class="main-navigation__wrapper container">
       <ul class="main-navigation__list">
         <li class="main-navigation__item main-navigation__item--current">
           <a class="main-navigation__link" href="index.html">Главная</a>
@@ -159,5 +160,6 @@
     </section>
   </div>
 </footer>
+<script src="js/script.js"></script>
 </body>
 </html>
