--- a/source/form.html
+++ b/source/form.html
@@ -171,7 +171,7 @@
     </section>
     <section class="main-footer__copyright copyright">
       <h2 class="visually-hidden">HTML Academy</h2>
-      <p class="copyright__text">Разработано:</p>
+      <p class="copyright__text">Разработано</p>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="visually-hidden">HTML Academy</span>
         <svg class="copyright__link-icon" width="27" height="35" viewBox="0 0 27 35" fill="none" xmlns="http://www.w3.org/2000/svg">
