--- a/source/index.html
+++ b/source/index.html
@@ -52,30 +52,34 @@
       <p class="advantages__slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
       <p class="advantages__reasons">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       <ul class="advantages__list">
-        <li class="advantages__item advantages__item--accent">
-          <h3 class="advantages__title heading advantages__title--accent">Настоящий городок</h3>
-          <span class="advantages__number">— №1 —</span>
-          <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
-          <img class="advantages__image" src="./img/photo-city-mobile.jpg" width="320" height="260" alt="Город Седона">
+        <li class="advantages__item advantages__item--accent advantages__item--decor">
+          <div class="advantages__item-wrapper">
+            <h3 class="advantages__title heading advantages__title--accent">Настоящий городок</h3>
+            <span class="advantages__number">— №1 —</span>
+            <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
+          </div>
+          <img class="advantages__image" src="./img/photo-city.jpg" width="320" height="260" alt="Город Седона">
           <ul class="advantages__list-qualities">
             <li class="advantages__item advantages__item--quality advantages__item--house">
-              <h3 class="advantages__title heading">Жилье</h3>
+              <h3 class="advantages__title advantages__title--quality heading">Жилье</h3>
               <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
             </li>
             <li class="advantages__item advantages__item--quality advantages__item--food">
-              <h3 class="advantages__title heading">Еда</h3>
+              <h3 class="advantages__title advantages__title--quality heading">Еда</h3>
               <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="advantages__item advantages__item--quality advantages__item--souvenirs">
-              <h3 class="advantages__title heading">Сувениры</h3>
+              <h3 class="advantages__title advantages__title--quality heading">Сувениры</h3>
               <p class="advantages__description">Не только китайского, но и местного производства!</p>
             </li>
           </ul>
         </li>
         <li class="advantages__item advantages__item--accent">
-          <h3 class="advantages__title heading advantages__title--accent">Там есть Мост дьявола</h3>
-          <span class="advantages__number">— №2 —</span>
-          <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <div class="advantages__item-wrapper">
+            <h3 class="advantages__title heading advantages__title--accent">Там есть Мост дьявола</h3>
+            <span class="advantages__number">— №2 —</span>
+            <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          </div>
           <img class="advantages__image" src="./img/photo-bridge-mobile.jpg" width="320" height="260" alt="Мост дьявола">
         </li>
         <li class="advantages__item">
@@ -150,7 +154,7 @@
     </section>
     <section class="main-footer__copyright copyright">
       <h2 class="visually-hidden">HTML Academy</h2>
-      <p class="copyright__text">Разработано:</p>
+      <p class="copyright__text">Разработано</p>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="visually-hidden">HTML Academy</span>
         <svg class="copyright__link-icon" width="27" height="35" viewBox="0 0 27 35" fill="none" xmlns="http://www.w3.org/2000/svg">
