added scss blocks form.html

--- a/source/form.html
+++ b/source/form.html
@@ -103,20 +103,20 @@
 
           <fieldset class="reviews__field-group reviews__field-group--row field-group">
             <legend class="field-group__title heading">Посещенные достопримечательности:</legend>
-            <ul class="field-group__list">
-              <li class="field-group__item">
+            <ul class="field-group__list field-group__list--checkbox">
+              <li class="field-group__item field-group__item--checkbox">
                 <input class="field-group__input-checkbox visually-hidden" type="checkbox" name="bridge" id="bridge" checked>
                 <label class="field-group__label-list" for="bridge">Мост Дьявола</label>
               </li>
-              <li class="field-group__item">
+              <li class="field-group__item field-group__item--checkbox">
                 <input class="field-group__input-checkbox visually-hidden" type="checkbox" name="mount" id="mount" checked>
                 <label class="field-group__label-list" for="mount">Гора-Колокол</label>
               </li>
-              <li class="field-group__item">
+              <li class="field-group__item field-group__item--checkbox">
                 <input class="field-group__input-checkbox visually-hidden" type="checkbox" name="park" checked id="park">
                 <label class="field-group__label-list" for="park">Слайд-парк</label>
               </li>
-              <li class="field-group__item">
+              <li class="field-group__item field-group__item--checkbox">
                 <input class="field-group__input-checkbox visually-hidden" type="checkbox" name="rocks" id="rocks">
                 <label class="field-group__label-list" for="rocks">Красные скалы</label>
               </li>
