--- a/source/index.html
+++ b/source/index.html
@@ -62,9 +62,13 @@
             <div class="advantages__item-wrapper">
               <h3 class="advantages__title heading advantages__title--accent">Настоящий городок</h3>
               <span class="advantages__number">— №1 —</span>
-              <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
+              <p class="advantages__description advantages__description--accent">Седона не аттракцион для туристов, там течет своя жизнь</p>
             </div>
-            <img class="advantages__image" src="./img/photo-city.jpg" width="320" height="260" alt="Город Седона">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="./img/photo-city-desktop.jpg 1x, ./img/photo-city-desktop@2x.jpg">
+              <source media="(min-width: 768px)" srcset="./img/photo-city-tablet.jpg 1x, ./img/photo-city-tablet@2x.jpg 2x">
+              <img class="advantages__image" src="./img/photo-city-mobile.jpg" srcset="./img/photo-city@2x.jpg 2x" alt="Город Седона">
+            </picture>
             <ul class="advantages__list-qualities">
               <li class="advantages__item advantages__item--quality advantages__item--house">
                 <h3 class="advantages__title advantages__title--quality heading">Жилье</h3>
@@ -84,9 +88,13 @@
             <div class="advantages__item-wrapper">
               <h3 class="advantages__title heading advantages__title--accent">Там есть Мост дьявола</h3>
               <span class="advantages__number">— №2 —</span>
-              <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+              <p class="advantages__description advantages__description--accent">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </div>
-            <img class="advantages__image" src="./img/devil-bridge.jpg" width="320" height="260" alt="Мост дьявола">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="./img/photo-bridge-desktop.jpg 1x, ./img/photo-bridge-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="./img/photo-bridge-tablet.jpg 1x, ./img/photo-bridge-tablet@2x.jpg 2x">
+              <img class="advantages__image" src="./img/photo-bridge-mobile.jpg" srcset="./img/photo-bridge-mobile@2x.jpg 2x" alt="Мост дьявола">
+            </picture>
           </li>
           <li class="advantages__item">
             <h3 class="advantages__title heading">Небольшая площадь</h3>
